--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
+  height: 100%;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
   text-align: center;
+  font-size: 3rem;
 }
 /* write your parent styles in here for your App.js */
